# rssgen

./: README.md  rssgen.code-workspace
api/: Cargo.toml  diesel.toml  docker-compose.yml
api/migrations/2025-07-05-183033_initial/: down.sql  up.sql
api/src/: error.rs  main.rs  schema.rs
api/src/models/: feed.rs  gemini.rs  mod.rs  post.rs  selector.rs
api/src/routes/: feed.rs  mod.rs  post.rs
api/src/services/: common.rs  feed.rs  mod.rs  rss.rs  selector.rs
frontend/: package.json
