[package]
name = "rssgen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres", "serde"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "serde_json", "time", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
lambda_http = { version = "0.15.1", features = ["anyhow"] }
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros"] }
